--- a/core/template/dashboard/heliotrope.html
+++ b/core/template/dashboard/heliotrope.html
@@ -18,6 +18,16 @@
 	</div>
 </div><br/>
 <script>
+    if ('#refresh_id#' != ''){
+        $('.eqLogic[data-eqLogic_uid=#uid#] .refresh').on('click', function () {
+                                                          jeedom.cmd.execute({id: '#refresh_id#'});
+                                                              });
+        }else{
+            $('.eqLogic[data-eqLogic_uid=#uid#] .refresh').remove();
+        }
+</script>
+
+<script>
 var chart1;
 var chart2;
 if($('#azimuth#id#').html() != undefined){
